# crackmes-one-solutions

./: .gitignore  README.org
solutions/5fa94bb233c5d424269a17b7/: notes.txt
solutions/5fa94bb233c5d424269a17b7/solver/: solver.py
solutions/644bd78b33c5d43938912c94/: flake.nix  notes.txt
solutions/64bf4185fc4ca2e6ca3d0f25/: flake.nix
solutions/64bf4185fc4ca2e6ca3d0f25/solver/: pyproject.toml  solver.py
solutions/64c5295f8117d58ab380f9e9/: flake.nix  notes.txt
solutions/64c5295f8117d58ab380f9e9/solver/: flake.nix  solver.py
