[tool.poetry]
name = "solver"
version = "0.1.0"
description = ""
authors = ["sysraccoon <sysraccoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
solver = "solver:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
